weird things happening with the docs. Hope this don’t destroy anything.

--- a/docs/latex/d2/d01/namespacedma.tex
+++ b/docs/latex/d2/d01/namespacedma.tex
@@ -1,13 +1,12 @@
-\hypertarget{namespacedma}{\section{dma Namespace Reference}
-\label{namespacedma}\index{dma@{dma}}
+\hypertarget{namespaceDMA}{\section{D\-M\-A Namespace Reference}
+\label{namespaceDMA}\index{D\-M\-A@{D\-M\-A}}
 }
 
 
 \subsection{Detailed Description}
-Time Restriction Widget
-
-This widget provides form elements for managing complex time restriction requirements
-
+Friends User model  \begin{DoxySeeAlso}{See Also}
+Rain\-Lab 
+\end{DoxySeeAlso}
 \begin{DoxyAuthor}{Author}
-Kristen Arnold 
+Carlos Arroyo 
 \end{DoxyAuthor}
