--- a/docs/latex/d2/d01/namespacedma.tex
+++ b/docs/latex/d2/d01/namespacedma.tex
@@ -4,64 +4,8 @@
 
 
 \subsection{Detailed Description}
-Class to handle form configuration for activity types
-
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
-Base class for implementing Activity Types Extend this class to provide custom logic for how an activity can be completed
-
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
 This class handles badging logic
 
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
-Manage custom events in the friends platform
-
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
-Class to log events in the friends platform
-
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
-Custom class to add additional functionality based on the Rainlab User model
-
-\begin{DoxyAuthor}{Author}
-Carlos Arroyo
-\end{DoxyAuthor}
-Syncronize the data from wordpress into october
-
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
-Syncronize the relationships between various models from wordpress into october
-
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
-Register service providers for Friends
-
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
-\hyperlink{namespaceDMA}{D\+M\+A} Notification model  \begin{DoxyAuthor}{Author}
-Carlos Arroyo
-\end{DoxyAuthor}
-Friends Settings model  \begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
-Friends Plugin Information File
-
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo
-\end{DoxyAuthor}
-Provide custom routes outside of what october provides
-
-\begin{DoxyAuthor}{Author}
-Kristen Arnold, Carlos Arroyo 
+Friends User model  \begin{DoxyAuthor}{Author}
+Carlos Arroyo 
 \end{DoxyAuthor}
