--- a/docs/latex/d2/d01/namespacedma.tex
+++ b/docs/latex/d2/d01/namespacedma.tex
@@ -1,22 +1,75 @@
-\hypertarget{namespacedma}{\section{dma Namespace Reference}
-\label{namespacedma}\index{dma@{dma}}
+\hypertarget{namespaceDMA}{\section{D\-M\-A Namespace Reference}
+\label{namespaceDMA}\index{D\-M\-A@{D\-M\-A}}
 }
 
 
 \subsection{Detailed Description}
-Activity Manager
-
-Activity Type Widget
-
-This widget provides form elements for managing custom Activities implemented by friends and 3rd party plugins
+Class to handle form configuration for activity types
 
 \begin{DoxyAuthor}{Author}
-Kristen Arnold
+Kristen Arnold, Carlos Arroyo
 \end{DoxyAuthor}
-Time Restriction Widget
-
-This widget provides form elements for managing complex time restriction requirements
+Base class for implementing Activity Types Extend this class to provide custom logic for how an activity can be completed
 
 \begin{DoxyAuthor}{Author}
-Kristen Arnold 
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+This class handles badging logic
+
+\begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+Manage custom events in the friends platform
+
+\begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+Class to log events in the friends platform
+
+\begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+Custom class to add additional functionality based on the Rainlab User model
+
+\begin{DoxyAuthor}{Author}
+Carlos Arroyo
+\end{DoxyAuthor}
+Set a cron task that will reset the points all users have earned for the week back to zero
+
+\begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+Syncronize the data from wordpress into october
+
+\begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+Syncronize the relationships between various models from wordpress into october
+
+\begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+Register service providers for Friends
+
+\begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+\hyperlink{namespaceDMA}{D\-M\-A} Notification model  \begin{DoxyAuthor}{Author}
+Carlos Arroyo
+\end{DoxyAuthor}
+Friends Settings model  \begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+Friends User group model  \begin{DoxyAuthor}{Author}
+Carlos Arroyo
+\end{DoxyAuthor}
+Friends Plugin Information File
+
+\begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo
+\end{DoxyAuthor}
+Provide custom routes outside of what october provides
+
+\begin{DoxyAuthor}{Author}
+Kristen Arnold, Carlos Arroyo 
 \end{DoxyAuthor}
